--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CLOCK DARK THEME</title>
-        <link rel = "icon" href = "clock3.png"   type = "image/x-icon">
+        <link rel = "icon" href = "dark_clock.png"   type = "image/x-icon">
         <link rel="stylesheet" href="style.css">
     </head>
 
