--- a/clock2light.html
+++ b/clock2light.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clock Light Theme</title>
+    <title>CLOCK LIGHT THEME</title>
     <link rel = "icon" href = "light_clock.png"   type = "image/x-icon">
     <link rel="stylesheet" href="style1.css">
+    <meta name="description" content="Light theme clock from all- projects-possible github clock watch analog and digital and more features. Shows your local time. Check it out now!!" >
+    <meta name="keywords" content="HTML, CSS, JavaScript clock all projects possible dark theme light theme analog digital local time">
+    <meta name="author" content="all-projects-possible github" > 
+
 </head>
 <body>
+    <div class="Button" >
+        <a href="index.html">
+            <button class="light button" type="button" name="switch to light">Dark Theme</button>
+        </a>
+    </div> 
     <div class="clock">
         <div class="hour" >
             <div class="hr" id="hr">      
