--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CLOCK DARK THEME</title>
-        <link rel = "icon" href = "dark_clock.png"   type = "image/x-icon">
+        <link rel = "icon" href = "dark_clock.png"   type = "image/x-icon"> 
         <link rel="stylesheet" href="style.css">
+        <meta name="description" content="Dark theme clock from all- projects-possible github clock watch analog and digital and more features. Shows your local time. Check it out now!!" >
+    <meta name="keywords" content="HTML, CSS, JavaScript clock all projects possible dark theme light theme analog digital local time">
+    <meta name="author" content="all-projects-possible github" > 
     </head>
 
     <body>
+        <div class="Button" >
+            <a href="clock2light.html">
+                <button class="light button" type="button" name="switch to light">Light Theme</button>
+            </a>
+        </div> 
+        
         <div class="clock">
             <div class="hour">
                 <div class="hr" id="hr">
