--- a/clock2light.html
+++ b/clock2light.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Light theme clock from all- projects-possible github clock watch analog and digital and more features. Shows your local time. Check it out now!!" >
     <meta name="keywords" content="HTML, CSS, JavaScript clock all projects possible dark theme light theme analog digital local time">
     <meta name="author" content="all-projects-possible github" > 
+    <meta name="theme-color" content="#31b1fb" />
 
 </head>
 <body>
