--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="Dark theme clock from all- projects-possible github clock watch analog and digital and more features. Shows your local time. Check it out now!!" >
     <meta name="keywords" content="HTML, CSS, JavaScript clock all projects possible dark theme light theme analog digital local time">
     <meta name="author" content="all-projects-possible github" > 
+        <meta name="theme-color" content="#091921"/>
     </head>
 
     <body>
